# guest-components

./: .dockerignore  .gitignore  AGENTS.md  CODE-OF-CONDUCT.md  CODEOWNERS  COMPATIBILITY.md  Cargo.toml  Dockerfile.aa  Makefile  README.md  agent.proto  build.rs  docker-compose.yml
api-server-rest/: Cargo.toml  Makefile  README.md  build.rs
api-server-rest/openapi/: api.json
api-server-rest/protos/: attestation_agent.proto  confidential_data_hub.proto
api-server-rest/src/: aa.rs  cdh.rs  main.rs  router.rs  utils.rs  version.rs
api-server-rest/src/client/: aa.rs  cdh.rs  mod.rs  ttrpc_client.rs
api-server-rest/src/ttrpc_proto/: attestation_agent.rs  attestation_agent_ttrpc.rs  confidential_data_hub.rs  confidential_data_hub_ttrpc.rs  derivation_key.rs  derivation_key_ttrpc.rs  mod.rs
app/: Cargo.toml  build.rs
app/src/: grpc.rs  main.rs  ttrpc.rs
app/src/rpc/: mod.rs
attestation-agent/app/: .gitignore  Cargo.toml  build.rs
attestation-agent/app/src/: grpc.rs  main.rs  ttrpc.rs
attestation-agent/attestation-agent/: Cargo.toml  build.rs  config.example.json  config.example.toml
attestation-agent/attestation-agent/src/: eventlog.rs  initdata.rs  lib.rs
attestation-agent/attestation-agent/test/: config1.toml  config2.toml  config3.toml  config4.toml  config6.toml
attestation-agent/attester/: Cargo.toml  Makefile  README.md
attestation-agent/attester/src/: lib.rs  tpm_utils.rs  utils.rs
attestation-agent/coco_keyprovider/: Cargo.toml  README.md  build.rs
attestation-agent/coco_keyprovider/src/: config.rs  encrypt.rs  main.rs
attestation-agent/coco_keyprovider/tools/: generate_keys.sh
attestation-agent/kbc/: Cargo.toml  build.rs
attestation-agent/kbc/src/: annotation_packet.rs  lib.rs
attestation-agent/kbs_protocol/: Cargo.toml  build.rs
attestation-agent/kbs_protocol/examples/: akp_get_resource.rs
attestation-agent/kbs_protocol/src/: akp.rs  api.rs  builder.rs  error.rs  keypair.rs  lib.rs  types.rs
attestation-agent/kbs_protocol/test/: kbs-config.toml  policy.rego  start_kbs.sh
attestation-agent/lib/: Cargo.toml
attestation-agent/lib/src/: config.rs  lib.rs  token.rs  token.rs.bak
attestation-agent/test-binaries/: Cargo.toml
attestation-agent/test-binaries/src/: lib.rs
attestation-agent/token/: Cargo.toml
attestation-agent/token/src/: coco_as.rs  kbs.rs  lib.rs
attester/: Cargo.toml
attester/src/: lib.rs
attester/src/az_snp_vtpm/: mod.rs
attester/src/sgx_occlum/: mod.rs
attester/src/snp/: mod.rs
coco_keyprovider/: Cargo.toml  README.md  build.rs
coco_keyprovider/docker/: Dockerfile.keyprovider
coco_keyprovider/src/enc_mods/: crypto.rs  kbs.rs  mod.rs
coco_keyprovider/src/grpc/: mod.rs
confidential-data-hub/hub/: Cargo.toml  build.rs
confidential-data-hub/hub/protos/: api.proto  keyprovider.proto
confidential-data-hub/hub/src/: api.rs  config.rs  error.rs  hub.rs  lib.rs
confidential-data-hub/hub/tests/: cdh.toml  image-pull.rs
confidential-data-hub/image/: Cargo.toml
confidential-data-hub/image/src/: error.rs  lib.rs
confidential-data-hub/image/test/: v1.json
confidential-data-hub/kms/: Cargo.toml  build.rs
confidential-data-hub/kms/src/: api.rs  error.rs  lib.rs  utils.rs
confidential-data-hub/overlay-network/: Cargo.toml
confidential-data-hub/overlay-network/src/: config.rs  error.rs  lib.rs
confidential-data-hub/secret/: Cargo.toml
confidential-data-hub/secret/src/: error.rs  lib.rs
confidential-data-hub/secret/tests/: envelope-1.json  secret_cli.rs  test_hsm_secrets.rs  vault-1.json  vault-2.json
confidential-data-hub/storage/: Cargo.toml
confidential-data-hub/storage/scripts/: luks-encrypt-storage
confidential-data-hub/storage/src/: error.rs  lib.rs
confidential-datahub/hub/: Cargo.toml
confidential-datahub/hub/src/: api.rs  hub.rs  lib.rs
confidential-datahub/secret/: Cargo.toml
confidential-datahub/secret/src/: error.rs  lib.rs
confidential-datahub/secret/test/: envelope-1.json  vault-1.json
docs/: KBS_URI.md  (+4 more)
image-rs/: Cargo.toml  README.md  build.rs
image-rs/benches/: image-pull.rs
image-rs/docs/: ccv1_image_security_design.md  design.md  image_auth.md  pull_image_with_nydus.md  registry_configuration.md
image-rs/docs/quickstart/: image_signing.md
image-rs/libs/test-utils/: Cargo.toml
image-rs/protos/: attestation-agent.proto  getresource.proto
image-rs/scripts/: add_conformance_image.sh  build_attestation_agent.sh  build_confidential_data_hub.sh  install_offline_fs_kbc_files.sh  install_test_signatures.sh
image-rs/src/: builder.rs  bundle.rs  config.rs  decrypt.rs  digest.rs  error.rs  image.rs  layer_store.rs  lib.rs  meta_store.rs  pull.rs  stream.rs  unpack.rs  verity.rs
image-rs/src/auth/: auth_config.rs  mod.rs
image-rs/src/decoder/: mod.rs
image-rs/src/nydus/: mod.rs  service.rs  utils.rs
image-rs/src/registry/: mod.rs
image-rs/src/resource/: mod.rs
image-rs/src/runtime_attestation/: grpc.rs  mod.rs  ttrpc.rs
image-rs/src/signature/: README.md  mod.rs
image-rs/src/snapshots/: mod.rs  overlay.rs
image-rs/src/stream/: mod.rs  unpack.rs
image-rs/src/verity/: dmverity.rs  mod.rs
image-rs/test_data/: Dockerfile  generate_test_data.md  ocicrypt_keyprovider_ttrpc.conf  registry-configuration.toml
image-rs/test_data/offline-fs-kbc/: aa-offline_fs_kbc-keys.json  aa-offline_fs_kbc-resources-for-icr.json  (+1 more)
image-rs/tests/: README.md  credential.rs  image_decryption.rs  registry_configuration.rs  signature_verification.rs  unpack_conformance.rs
ocicrypt-rs/: Cargo.toml  README.md  build.rs
ocicrypt-rs/data/: sample_kbc_annotation.json
ocicrypt-rs/src/: config.rs  encryption.rs  helpers.rs  lib.rs  spec.rs
protos/: Cargo.toml  build.rs  getresource.proto
protos/src/: lib.rs
sample_keyprovider/: .gitignore  Cargo.toml  README.md
sample_keyprovider/src/: main.rs
signature/: Cargo.toml  README.md
signature/fixtures/: policy.json
signature/src/: agent.rs  lib.rs
tdm/: Cargo.toml  README.md
tdm/docs/: architecture.md
trustee-client/: Cargo.toml  README.md
trustee-client/src/: main.rs  tcconfig.rs
(+553 files in other folders)
