[workspace]
resolver = "2"
members = [
    "api-server-rest",
    "attestation-agent/attestation-agent",
    "attestation-agent/kbc",
    "attestation-agent/kbs_protocol",
    "attestation-agent/attester",
    "attestation-agent/deps/resource_uri",
    "attestation-agent/deps/crypto",
    "attestation-agent/deps/sev",
    "attestation-agent/coco_keyprovider",
    "confidential-data-hub/hub",
    "confidential-data-hub/kms",
    "image-rs",
    "ocicrypt-rs",
]

[workspace.dependencies]
aes = "0.8.3"
aes-gcm = "0.10.2"
anyhow = "1.0"
assert-json-diff = "2.0"
assert_cmd = "2"
async-trait = "0.1.88"
base64 = "0.22.1"
base64-serde = "0.7"
bincode = "1.3.3"
cfg-if = "1.0.0"
chrono = "0.4.39"
clap = "~4.2.7"
config = "0.14.1"
const_format = "0.2.34"
ctr = "0.9.2"
env_logger = "0.11.8"
hex = "0.4.3"
hmac = "0.12.1"
jwt-simple = { version = "0.12", default-features = false, features = [
    "pure-rust",
] }
kbs-types = "0.10.0"
log = "0.4.27"
nix = "0.29"
openssl = "0.10"
prost = "0.13"
protobuf = "=3.7.1"
rand = "0.9.1"
reqwest = { version = "0.12", default-features = false }
resource_uri = { path = "attestation-agent/deps/resource_uri" }
ring = "0.17"
rsa = "0.9.8"
rstest = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3.12.0", features = ["base64"] }
serde_json = "1.0"
serial_test = "3"
sha2 = "0.10.7"
strum = { version = "0.26", features = ["derive"] }
tempfile = "3.19"
testcontainers = "0.22"
thiserror = "2.0"
tokio = "1.44"
toml = "0.8.21"
tonic = "0.12"
tonic-build = "0.12"
ttrpc = "0.8.4"
ttrpc-codegen = "0.5.0"
url = "2.5.4"
uuid = "1"
zeroize = "1.5.7"
