[package]
name = "attester"
version = "0.1.0"
authors = ["The Attestation Agent Authors"]
publish = false
edition = "2021"

[dependencies]
anyhow.workspace = true
base64.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
tdx-attest-rs = { git = "https://github.com/intel/SGXDataCenterAttestationPrimitives", rev = "cc582e8be0c9010295c66fb58c59f74744017600", optional = true }

[features]
default = ["all-attesters"]
all-attesters = ["tdx-attester"]

tdx-attester = ["tdx-attest-rs"]