[package]
name = "coco_keyprovider"
version = "0.1.0"
authors = ["The Attestation Agent Authors"]
publish = false
edition = "2021"

[dependencies]
aes-gcm = "0.10.1"
anyhow = "1.0"
base64 = "0.13.0"
clap = { version = "4.0.29", features = ["derive"] }
ctr = "0.9.2"
env_logger = "0.9.0"
futures = "0.3.5"
jwt-simple = "0.11.4"
log = "0.4.14"
prost = "0.8"
rand = "0.8.4"
reqwest = "0.11.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.24"
strum_macros = "0.24"
tokio = { version = "1.0", features = ["fs", "rt-multi-thread"] }
tonic = "0.5"
uuid = { version = "1.3.0", features = ["fast-rng", "v4"] }

[build-dependencies]
shadow-rs = "0.5.25"
tonic-build = "0.5"

[features]
