[package]
name = "sample_keyprovider"
version = "1.0.0"
authors = ["The Attestation Agent Authors"]
publish = false
edition = "2018"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tonic = "0.5"
prost = "0.8"
futures = "0.3.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes-gcm = "0.9.2"
base64 = "0.13.0"
clap = "2"
anyhow = "1.0"
rand = "0.8.4"
log = "0.4.14"
env_logger = "0.9.0"
openssl = { version = "0.10", optional = true }

[build-dependencies]
tonic-build = "0.5"
shadow-rs = "0.5.25"

[features]
default = []
sample_enc = []
offline_fs_kbs = ["openssl"]
