[package]
name = "sample_keyprovider"
version = "0.1.0"
authors = ["The Attestation Agent Authors"]
publish = false
edition = "2021"

[dependencies]
aes-gcm = "0.10.1"
anyhow = "1.0"
base64 = "0.13.0"
clap = "2"
ctr = "0.9.2"
env_logger = "0.9.0"
futures = "0.3.5"
log = "0.4.14"
prost = "0.8"
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.24"
strum_macros = "0.24"
tokio = { version = "1.0", features = ["full"] }
tonic = "0.5"

[build-dependencies]
shadow-rs = "0.5.25"
tonic-build = "0.5"

[features]
